[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
ads1x1x = "0.1"
mcp4x = "0.1"
ssd1306 = "0.2"
embedded-graphics = "0.4.4"
cortex-m = "0.5.0"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
stm32f30x = "0.7.1"
f3 = "0.6.1"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.4.0"
nb = "0.1"
embedded-hal = "0.2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
