[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers using an stm32f103 bluepill board."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples-bluepill"
version = "0.1.0"
edition = "2018"

[dependencies]
ad983x = "0.2"
ads1x1x = "0.2"
bmi160 = "0.1"
ds1307 = "0.3"
eeprom24x = "0.3"
embedded-ccs811 = "0.1"
hdc20xx = "0.1"
iaq-core = "0.1"
isl29125 = "0.1"
max170xx = "0.1"
mcp794xx = "0.2"
opt300x = "0.1"
pwm-pca9685 = "0.2"
si4703 = "0.1"
tmp006 = "0.1"
tmp1x2 = "0.2"
veml6030 = "0.1"
veml6070 = "0.1"
veml6075 = "0.2"

ssd1306 = "0.2"
embedded-graphics = "0.4.4"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.5.0"
nb = "0.1"
embedded-hal = "0.2.3"
libm = "0.1"
panic-semihosting = "0.5"
cortex-m = "0.6"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.3"
[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]
