[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers using an stm32f103 bluepill board."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples-bluepill"
version = "0.1.0"
edition = "2018"

[dependencies]
ad983x = "0.2"
ads1x1x = "0.2"
bmi160 = "0.1"
ds1307 = "0.3"
ds323x = "0.4"
eeprom24x = "0.3"
embedded-ccs811 = "0.2"
hdc20xx = "0.1"
iaq-core = "0.1"
isl29125 = "0.1"
max170xx = "0.1"
max3010x = "0.1"
mcp794xx = "0.2"
mlx9061x = "0.2"
mma8x5x = "0.1"
opt300x = "0.1"
pcf857x = "0.4"
pwm-pca9685 = "0.3"
si4703 = "0.1"
tcs3472 = "0.2"
tmp006 = "0.1"
tmp1x2 = "0.2"
veml6030 = "0.1"
veml6070 = "0.1"
veml6075 = "0.2"

ssd1306 = "0.4"
embedded-graphics = "0.6"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.7"
nb = "1"
embedded-hal = "0.2.4"
libm = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6.5"
cortex-m-rtic = "0.5.3"
shared-bus-rtic = "0.2.2"

panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  "0.2.2", features = ["cortex-m"] }

[dependencies.stm32f1xx-hal]
version = "0.6"
features = ["stm32f103", "rt", "medium"]
