[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
ad983x = "0.1"
ads1x1x = "0.2"
apds9960 = "0.1"
ds1307 = "0.2"
ds323x = "0.2"
eeprom24x = "0.3"
kxcj9 = "0.2"
lm75 = "0.1"
max3010x = "0.1"
max44009 = "0.1"
mcp4x = "0.1"
mcp49xx = "0.1"
mcp794xx = "0.1"
opt300x = "0.1"
pcf857x = "0.3"
pwm-pca9685 = "0.1"
ssd1306 = "0.2"
tcs3472 = "0.1"
tmp006 = "0.1"
tmp1x2 = "0.2"
veml6030 = { git = "https://github.com/eldruin/veml6030-rs"}
veml6040 = "0.1"
veml6075 = "0.2"
w25 = { git = "https://github.com/eldruin/w25-rs"}
xca9548a = "0.2"
embedded-graphics = "0.4"
cortex-m = "0.5.0"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
stm32f30x = "0.7.1"
f3 = "0.6.1"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.4.0"
nb = "0.1"
embedded-hal = "0.2"
libm = "0.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
