[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
ad983x = "0.2"
ads1x1x = "0.2"
apds9960 = "0.1"
ds1307 = "0.3"
ds323x = "0.4"
eeprom24x = "0.4"
embedded-ccs811 = "0.2"
kxcj9 = "0.2"
lm75 = "0.2"
max3010x = "0.1"
max44009 = "0.2"
mcp4x = "0.1"
mcp49xx = "0.2"
mcp794xx = "0.2"
mlx9061x = "0.2"
mma8x5x = "0.1"
opt300x = "0.1"
pcf857x = "0.4"
pwm-pca9685 = "0.3"
tcs3472 = "0.2"
tmp006 = "0.1"
tmp1x2 = "0.2"
veml6030 = "0.1"
veml6040 = "0.1"
veml6075 = "0.2"
w25 = { git = "https://github.com/eldruin/w25-rs"}
xca9548a = "0.2"

rtcc = "0.2"
chrono = { version = "0.4", default-features = false }
ssd1306 = "0.4"
embedded-graphics = "0.6"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
stm32f30x = "0.8"
f3 = "0.6.1"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.7"
nb = "1"
embedded-hal = "0.2.4"
libm = "0.2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
